<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/edit_bg"
    android:backgroundTint="@color/whiteIsh"
    android:layout_height="@dimen/post_layout_height"
    android:layout_marginVertical="@dimen/post_layout_margin_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/home_wei_hei"
        android:layout_height="@dimen/home_wei_hei"
        android:layout_marginStart="@dimen/search_margin_horizon"
        android:layout_marginTop="@dimen/margin_left_view"
        android:background="@color/white"
        android:src="@drawable/person"
        app:civ_border_color="@color/grey"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_size_main"
        android:text="@string/sabuj_ahmed"
        android:textColor="@color/darkBlack"
        android:textSize="@dimen/text_size_reals"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/postted_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/image_hei_wei"
        android:text="@string/_665_hours_ago"
        android:textColor="@color/textDarkGrey"
        android:textSize="@dimen/text_size_text"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/username_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/username_text"
        app:layout_constraintVertical_bias="0.37" />

    <ImageView
        android:id="@+id/posted_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/post_image_item_height"
        android:background="@color/pinkGrey"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.16000003"
        />


    <TextView
        android:id="@+id/posted_caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/search_margin_horizon"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="0.05"
        android:text="@string/post_next_details"
        android:textColor="@color/textDarkGrey"
        android:textSize="@dimen/text_size_text"
        app:layout_constraintBottom_toTopOf="@+id/love_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posted_image" />

    <ImageView
        android:id="@+id/love_icon"
        android:layout_width="@dimen/post_image_hei_wei"
        android:layout_height="@dimen/post_image_hei_wei"
        android:padding="@dimen/post_padding"
        android:layout_margin="@dimen/search_margin_horizon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/heart"
        android:contentDescription="@string/extra" />

    <ImageView
        android:id="@+id/send_icon"
        android:layout_width="@dimen/post_image_hei_wei"
        android:layout_height="@dimen/post_image_hei_wei"
        android:padding="@dimen/post_padding"
        android:layout_marginStart="@dimen/margin_horizon"
        app:layout_constraintBottom_toBottomOf="@+id/love_icon"
        app:layout_constraintStart_toEndOf="@+id/love_icon"
        app:layout_constraintTop_toTopOf="@+id/love_icon"
        android:contentDescription="@string/extra"
        app:srcCompat="@drawable/send" />

    <ImageView
        android:id="@+id/bookmark_icon"
        android:layout_width="@dimen/post_favourite_hei_wei"
        android:layout_height="@dimen/post_favourite_hei_wei"
        android:layout_marginEnd="@dimen/search_margin_horizon"
        android:background="@color/white"
        android:contentDescription="@string/extra"
        app:layout_constraintBottom_toBottomOf="@+id/send_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/send_icon"
        app:srcCompat="@drawable/notsaveicon" />


    <View

        android:id="@+id/viewOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8ADAD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>